--- a/elasticsearch/pom.xml
+++ b/elasticsearch/pom.xml
@@ -25,5 +25,10 @@
             <artifactId>elasticsearch</artifactId>
             <version>0.19.0</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
     </dependencies>
 </project>
